--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/top.css
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/top.css
@@ -8,6 +8,10 @@
 			height: 45px;
 			background-color: #232323;
 			margin: 0px auto;
+			color: white;
+			padding-left: 10px;
+			line-height: 45px;
+			letter-spacing: 4px;
 		}
 
 			/*顶部*/
