--- a/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/top.css
+++ b/--688f3fa449bb0b284cc9e0b91cf3217138a195f6/top.css
@@ -1,7 +1,8 @@
-*{margin: 0px;
+*{       margin: 0px;
 		padding: 0px;
 		list-style: none;
 		/*border: 1px solid red;*/
+		
 		}
 		#top{
 			width: 100%;
@@ -17,11 +18,17 @@
 			/*顶部*/
 
 		.hlogo{
-			width:1300px;
+			width:100%;
 			height: 169px;
-			margin: auto;
+			margin:0px auto;
 	
 		}/*导航栏*/
+			/*导航栏居中*/
+				#alld{
+			margin: 0px auto;
+			width:1300px;
+			height: 169px;
+		}
 		.hlogo img{
 		float:left;
 		}
